--- a/views/index.ejs
+++ b/views/index.ejs
@@ -55,6 +55,12 @@
         $("#cat_device").on("click", function() {
             $("#main-content-wrapper").load("cat_device");
         });
+        $("#action").on("click", function() {
+            $("#main-content-wrapper").load("action");
+        });
+        $("#action_device").on("click", function() {
+            $("#main-content-wrapper").load("action_device");
+        });
         $("#check_connect").on("click", function() {
             $("#main-content-wrapper").load("check_connect");
         });
