--- a/views/modules/cat_device.ejs
+++ b/views/modules/cat_device.ejs
@@ -34,8 +34,8 @@
                                     <th class="td-left">Mã</th>
                                     <th class="td-left">Tên</th>
                                     <th class="td-left">Nội dung</th>
-                                    <th class="td-center">Sửa</th>
-                                    <th class="td-center">Xóa</th>
+                                    <th class="td-fixed td-center">Sửa</th>
+                                    <th class="td-fixed td-center">Xóa</th>
                                 </tr>
                             </thead>
                             <tbody>
