--- a/views/modules/user.ejs
+++ b/views/modules/user.ejs
@@ -73,7 +73,7 @@
                                             <div class="row sub-row">
                                                 <div class="col-sm-2">
                                                     <div class="title-name">
-                                                        2) Quê quán:
+                                                        2) Địa chỉ:
                                                     </div>
                                                 </div>
                                                 <div class="col-sm-10">
@@ -110,6 +110,19 @@
             </div>
             <!-- box Danh sach thiet bi dieu khien -->
             <div class="box box-solid">
+                    <div class="box-header with-border">
+                        <h3 class="box-title">
+                            <i class="fa fa-image"></i> Hoạt cảnh
+                        </h3>
+                    </div>
+                    <div class="box-body">
+                        <div class="col-sm-12">
+                            <div id="zoneAction"></div>
+                        </div>
+                    </div>
+                </div>
+            <!-- box Danh sach thiet bi dieu khien -->
+            <div class="box box-solid">
                 <div class="box-header with-border">
                     <h3 class="box-title">
                         <i class="fa fa-sun-o"></i> Thiết bị điều khiển 
@@ -124,6 +137,7 @@
                             <thead>
                                 <tr>
                                     <th class="td-center">Stt</th>
+                                    <th class="td-center">Hình ảnh</th>
                                     <th class="td-left">Tên thiết bị</th>
                                     <th class="td-right">Tình trạng</th>
                                     <th class="td-center">Chuyển công tắc</th>
