--- a/views/partials/menu_ver.ejs
+++ b/views/partials/menu_ver.ejs
@@ -24,6 +24,16 @@
                     <i class="fa fa-users"></i> <span>Quản lý người dùng</span>
                 </a>
             </li>
+            <li class="treeview">
+                <a id="action" href="">
+                    <i class="fa fa-angle-double-right"></i> <span>Định nghĩa hoạt cảnh</span>
+                </a>
+            </li>
+            <li class="treeview">
+                <a id="action_device" href="">
+                    <i class="fa fa-angle-double-right"></i> <span>Quản lý hoạt cảnh</span>
+                </a>
+            </li>
 
             <li class="treeview">
                 <a id="check_connect" href="">
