--- a/SmartHome/app/src/main/res/layout/item_device_row.xml
+++ b/SmartHome/app/src/main/res/layout/item_device_row.xml
@@ -12,7 +12,8 @@
         android:layout_height="100dp"
         android:layout_gravity="center"
         android:background="@android:color/transparent"
-        app:cardBackgroundColor="@android:color/transparent">
+        app:cardBackgroundColor="@android:color/transparent"
+        app:cardElevation="0dp">
 
         <RelativeLayout
             android:id="@+id/relativeLayout"
@@ -26,8 +27,7 @@
                 android:layout_width="60dp"
                 android:layout_height="60dp"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="5dp"
-                android:background="@drawable/circle_image" />
+                android:layout_marginTop="5dp" />
 
             <TextView
                 android:id="@+id/textView"
