--- a/views/index.ejs
+++ b/views/index.ejs
@@ -52,6 +52,9 @@
         $("#device").on("click", function() {
             $("#main-content-wrapper").load("device");
         });
+        $("#user_device").on("click", function() {
+            $("#main-content-wrapper").load("user_device");
+        });
         $("#cat_device").on("click", function() {
             $("#main-content-wrapper").load("cat_device");
         });
