--- a/views/modules/action_device.ejs
+++ b/views/modules/action_device.ejs
@@ -55,19 +55,21 @@
                 </div>
                 <div class="box-body">
                     <div class="col-sm-12">
-                        <table id="tblAC_Action_Device" class="table table-bordered table-hover">
-                            <thead>
-                                <tr>
-                                    <th class="td-fixed td-center">Stt</th>
-                                    <th class="td-center">Hoạt cảnh</th>
-                                    <th class="td-left">Thiết bị</th>
-                                    <th class="td-right">Trạng thái</th>
-                                    <th class="td-fixed td-center">Xóa</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                            </tbody>
-                        </table>
+                        <div class="scroll-table-x">
+                            <table id="tblAC_Action_Device" class="table table-bordered table-hover">
+                                <thead>
+                                    <tr>
+                                        <th class="td-fixed td-center">Stt</th>
+                                        <th class="td-center">Hoạt cảnh</th>
+                                        <th class="td-left">Thiết bị</th>
+                                        <th class="td-right">Trạng thái</th>
+                                        <th class="td-fixed td-center">Xóa</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                </tbody>
+                            </table>
+                        </div>
                     </div>
                 </div>
             </div>
