--- a/views/partials/menu_ver.ejs
+++ b/views/partials/menu_ver.ejs
@@ -25,6 +25,11 @@
                 </a>
             </li>
             <li class="treeview">
+                    <a id="user_device" href="">
+                        <i class="fa fa-angle-double-right"></i> <span>Người dùng và thiết bị</span>
+                    </a>
+                </li>
+            <li class="treeview">
                 <a id="action" href="">
                     <i class="fa fa-angle-double-right"></i> <span>Định nghĩa hoạt cảnh</span>
                 </a>
