--- a/views/modules/cat_device.ejs
+++ b/views/modules/cat_device.ejs
@@ -27,20 +27,22 @@
                 </div>
                 <div class="box-body">
                     <div class="col-sm-12">
-                        <table id="tblCatDevice" class="table table-bordered table-hover">
-                            <thead>
-                                <tr>
-                                    <th class="td-center">Stt</th>
-                                    <th class="td-left">Mã</th>
-                                    <th class="td-left">Tên</th>
-                                    <th class="td-left">Nội dung</th>
-                                    <th class="td-fixed td-center">Sửa</th>
-                                    <th class="td-fixed td-center">Xóa</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                            </tbody>
-                        </table>
+                        <div class="scroll-table-x">
+                            <table id="tblCatDevice" class="table table-bordered table-hover">
+                                <thead>
+                                    <tr>
+                                        <th class="fixed td-center">Stt</th>
+                                        <th class="td-left">Mã</th>
+                                        <th class="td-left">Tên</th>
+                                        <th class="td-left">Nội dung</th>
+                                        <th class="td-fixed td-center">Sửa</th>
+                                        <th class="td-fixed td-center">Xóa</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                </tbody>
+                            </table>
+                        </div>
                     </div>
                 </div>
             </div>
